# model

./: .env.example  .gitignore  CLAUDE.md  README.md  clean_images.py  config.json  config_example.json  main.py  microstructure metadata - Removed (2).csv  pyproject.toml  requirements.txt  run_training.py
datasets/: metadata_debug.csv  metadata_grouped.csv  metadata_latest.csv  metadata_latest_02_05_26_02_27.csv  microstructure metadata - Removed (2).csv  microstructure metadata - Removed (3).csv  microstructure.csv  non_dp_ids.csv  temp_outliers.csv
docs/: bayesian_optimisation_design.md  column_sanitization.md  image_cleaning_design.md  imputation_design.md  morphological_feature_extraction.md  system_architecture.md  type_inference_design.md
models/: best_model.pkl  yt_perf_model.pkl
notebooks/: bayes_impact.ipynb  bayes_tuning.ipynb  benchmark_results.csv  metrics_history.ipynb  microstructure_debug.ipynb  microstructure_debug_lowres.ipynb  microstructure_demo.ipynb  microstructure_demo_iterate.ipynb  microstructure_generator.ipynb  microstructure_grade_only.ipynb  morph_ablation.ipynb  pipeline_benchmark.ipynb  prepare_features.ipynb
runs/: bayes_per_target_metrics.csv  grouped_cv_results.csv  hyperparams.json  metrics_log.csv
scripts/: iterate_demo.py
src/: __init__.py  column_sanitizer.py  config.py  data_loader.py  drive_client.py  feature_extractor.py  feature_loader.py  features.py  hyperparams.py  image_cleaner.py  image_downloader.py  metrics_logger.py  metrics_viz.py  model_trainer.py  registry.py  run_store.py  sheet_reader.py  sheets_client.py
(+87 files in other folders)
